<resources>
    <string name="app_name">GeoConnect App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="get_location">Get Location</string>
    <string name="menu_friends">Friends</string>
    <string name="menu_map">map</string>
    <string name="menumap">Map</string>

    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="ask_sign_up">Don\'t have an account?</string>
    <string name="welcoming">Welcome to\nGeoConnect</string>
    <string name="logo">Logo</string>
    <string name="sign_up_now">Sign Up Now</string>
    <string name="sign_up">SIGN UP</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in">LOG IN</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="lets_go_geocache">Let\'s go Geocache!</string>
    <string name="hello">Hello!</string>
    <string name="please_fill_in_the_details">Please fill in the details.</string>
    <string name="enter_your_phone_number">Enter Your Phone Number</string>
    <string name="at_least_8_character">At Least 8 character</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="verification_code">Verification code</string>
    <string name="verify">Verify</string>
    <string name="email">Email</string>
</resources>