<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/white"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/LoginLogo"
        android:layout_width="317dp"
        android:layout_height="120dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        card_view:srcCompat="@drawable/geoconnect_icon" />

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:gravity="left"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="@+id/LoginLogo"
        app:layout_constraintHorizontal_bias="0.15
"
        app:layout_constraintStart_toStartOf="@+id/LoginLogo"
        app:layout_constraintBottom_toTopOf="@+id/useremail"
        app:layout_constraintTop_toBottomOf="@id/LoginLogo">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_back"
            android:textSize="35sp"
            android:textStyle="bold"
            android:fontFamily="@font/sora_bold"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/lets_go_geocache"
            tools:layout_editor_absoluteX="48dp"
            tools:layout_editor_absoluteY="183dp" />

    </LinearLayout>




    <EditText
        android:id="@+id/useremail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/custom_edittext"
        android:drawableStart="@drawable/phone"
        android:fontFamily="sans-serif"
        android:hint="@string/phone_number"
        android:drawablePadding="8dp"
        android:paddingStart="8dp"
        android:paddingEnd="4dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LoginLogo" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/custom_edittext"
        android:drawableStart="@drawable/lock"
        android:drawableEnd="@drawable/eye"
        android:fontFamily="sans-serif"
        android:hint="@string/password"
        android:drawablePadding="8dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textColor="@color/black"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/loginbtn"
        app:layout_constraintEnd_toEndOf="@id/useremail"
        app:layout_constraintStart_toStartOf="@id/useremail"
        app:layout_constraintTop_toBottomOf="@+id/useremail" />

    <Button
        android:id="@+id/loginbtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/green"
        android:text="@string/login"
        android:textStyle="bold"
        app:cornerRadius="24dp"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/password" />
    
    <LinearLayout
        android:id="@+id/linear_layout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="@+id/loginbtn"
        app:layout_constraintHorizontal_bias="0.441"
        app:layout_constraintStart_toStartOf="@+id/loginbtn"
        app:layout_constraintTop_toBottomOf="@+id/loginbtn">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ask_sign_up"
            android:textStyle="bold"
            android:textSize="11sp"/>

        <TextView
            android:id="@+id/sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_now"
            android:textStyle="bold"
            android:textSize="11sp"
            android:textColor="@color/kelly_green"
            android:layout_marginStart="5dp"/>



    </LinearLayout>








</androidx.constraintlayout.widget.ConstraintLayout>