<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".RegistrationPage">

    <ImageView
        android:id="@+id/RegisterLogo"
        android:layout_width="317dp"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        card_view:srcCompat="@drawable/geoconnect_icon" />

    <LinearLayout
        android:id="@+id/linear_layout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/signInEmail"
        app:layout_constraintEnd_toEndOf="@+id/RegisterLogo"
        app:layout_constraintHorizontal_bias="0.03"
        app:layout_constraintStart_toStartOf="@+id/RegisterLogo"
        app:layout_constraintTop_toBottomOf="@id/RegisterLogo">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sora_bold"
            android:text="@string/hello"
            android:textColor="#757575"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/please_fill_in_the_details"
            android:textColor="#666666"
            tools:layout_editor_absoluteX="48dp"
            tools:layout_editor_absoluteY="183dp" />

    </LinearLayout>

    <EditText
        android:id="@+id/signInEmail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/custom_edittext"
        android:drawableStart="@drawable/user"
        android:drawablePadding="8dp"
        android:fontFamily="sans-serif"
        android:hint="@string/enter_your_email"
        android:inputType="text|textEmailAddress"
        android:paddingStart="8dp"
        android:paddingEnd="4dp"
        android:textColor="@color/black"
        android:textColorHint="@color/hintColor"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/signInUserPhoneNum"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RegisterLogo" />

    <EditText
        android:id="@+id/signInUserPhoneNum"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/custom_edittext"
        android:drawableStart="@drawable/phone"
        android:drawablePadding="8dp"
        android:fontFamily="sans-serif"
        android:hint="@string/enter_your_phone_number"
        android:inputType="phone"
        android:paddingStart="8dp"
        android:paddingEnd="4dp"
        android:textColor="@color/black"
        android:textColorHint="@color/hintColor"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signInEmail" />

    <EditText
        android:id="@+id/verificationField"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="244dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/custom_edittext"
        android:drawableStart="@drawable/phone"
        android:drawablePadding="8dp"
        android:fontFamily="sans-serif"
        android:hint="@string/verification_code"
        android:paddingStart="8dp"
        android:paddingEnd="4dp"
        android:textColor="@color/black"
        android:textColorHint="@color/hintColor"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signInEmail" />

    <EditText
        android:id="@+id/signInPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/custom_edittext"
        android:drawableStart="@drawable/lock"
        android:drawablePadding="8dp"
        android:fontFamily="sans-serif"
        android:hint="@string/at_least_8_character"
        android:inputType="text|textPassword"
        android:paddingStart="8dp"
        android:paddingEnd="4dp"
        android:textColor="@color/black"
        android:textColorHint="@color/hintColor"
        android:textSize="15sp"
        app:layout_constraintHorizontal_bias="0.5"
        card_view:layout_constraintBottom_toTopOf="@+id/signInBtn"
        card_view:layout_constraintEnd_toEndOf="@id/signInUserPhoneNum"
        card_view:layout_constraintStart_toStartOf="@id/signInUserPhoneNum"
        card_view:layout_constraintTop_toBottomOf="@+id/signInUserPhoneNum" />

    <Button
        android:id="@+id/signInBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/green"
        android:onClick="signUp"
        android:text="@string/sign_up"
        android:textStyle="bold"
        android:enabled="false"
        app:cornerRadius="24dp"
        app:layout_constraintBottom_toTopOf="@+id/linear_layout4"
        app:layout_constraintEnd_toEndOf="@+id/signInPassword"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="@+id/signInPassword"
        app:layout_constraintTop_toBottomOf="@+id/signInPassword" />

    <Button
        android:id="@+id/submitVerification"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/green"
        android:onClick="submitVerificationCode"
        android:text="@string/verify"
        android:textStyle="bold"
        app:cornerRadius="24dp"
        app:layout_constraintEnd_toEndOf="@+id/signInPassword"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="@+id/signInPassword"
        app:layout_constraintTop_toBottomOf="@+id/verificationField" />

    <LinearLayout
        android:id="@+id/linear_layout4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/signInBtn"
        app:layout_constraintHorizontal_bias="0.441"
        app:layout_constraintStart_toStartOf="@+id/signInBtn"
        app:layout_constraintTop_toBottomOf="@+id/signInBtn">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            android:textColor="#666666"
            android:textSize="11sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/login_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/log_in"
            android:textColor="@color/kelly_green"
            android:textSize="11sp"
            android:textStyle="bold" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>